--- a/Asm1.html
+++ b/Asm1.html
@@ -128,7 +128,7 @@
                     </div>
                     <div class="name">Túi Gucci</div>
                     <div class="desc">Hàng chất lượng cao đến từ Mỹ</div>
-                    <div class="price">500.000 VNĐ</div>
+                    <div class="price">năm trăm nghìn VNĐ</div>
                 </div>
                 <div class="item">
                     <img src="/Asm1/imgs/Baggucci/gucci4.jpg" width="200px" height="180px">
